--- a/index.html
+++ b/index.html
@@ -8,10 +8,15 @@
 </head>
 <body>
   <div id="app">
-    <h1>Wordle Bairros RJ</h1>
-    <p>Descubra o bairro secreto em 5 tentativas!</p>
+    <h1>BairroGuessr</h1>
+    <p>Adivinhe qual o bairro destacado de hoje</p>
     <div id="mapa">
-      <div id="mapid" style="width: 600px; height: 400px"></div>
+      <div id="mapid"></div>
+      <div class="leaflet-top leaflet-right">
+        <a id="github-link" href="https://github.com/RicDicPic/project_RJ" target="_blank">
+          <img src="https://i.imgur.com/NlAZd9f_d.webp?maxwidth=760&fidelity=grand" alt="Link para o repositório do projeto no GitHub" width="100" height="100" />
+        </a>
+      </div>
     </div>
     <div id="painel-jogo">
       <div>
