--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
     <div id="mapa">
       <div id="mapid"></div>
       <div class="leaflet-top leaflet-right">
-        <a id="github-link" href="https://github.com/RicDicPic/project_RJ" target="_blank">
-          <img src="https://i.imgur.com/NlAZd9f_d.webp?maxwidth=760&fidelity=grand" alt="Link para o repositório do projeto no GitHub" width="100" height="100" />
+        <a id="github-link" href="#" onclick="window.open('https://github.com/RicDicPic/project_RJ', '_blank')">
+            <img src="https://i.imgur.com/NlAZd9f_d.webp?maxwidth=760&fidelity=grand" alt="Link para o repositório do projeto no GitHub" width="100" height="100" />
         </a>
-      </div>
+    </div>
+    
     </div>
     <div id="painel-jogo">
       <div>
