--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Wordle RJ</title>
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div id="app">
@@ -14,10 +15,9 @@
       <div id="mapid"></div>
       <div class="leaflet-top leaflet-right">
         <a id="github-link" href="#" onclick="window.open('https://github.com/RicDicPic/project_RJ', '_blank')">
-            <img src="https://i.imgur.com/NlAZd9f_d.webp?maxwidth=760&fidelity=grand" alt="Link para o repositório do projeto no GitHub" width="100" height="100" />
+            <img src="https://i.imgur.com/NlAZd9f_d.webp?maxwidth=760&fidelity=grand" alt="Link para o repositório do projeto no GitHub" width="100" height="100">
         </a>
-    </div>
-    
+      </div>
     </div>
     <div id="painel-jogo">
       <div>
@@ -28,8 +28,8 @@
         placeholder="Digite o nome de um bairro" 
         data-list="" 
         autocomplete="off" 
-      />
-      <button id="enviar-btn">Enviar</button>
+        >
+        <button id="enviar-btn">Enviar</button>
       </div>
       <div id="resultado"></div>
     </div>
