--- a/index.html
+++ b/index.html
@@ -8,16 +8,17 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div class="leaflet-top leaflet-right">
+    <a id="github-link" href="#" onclick="window.open('https://github.com/RicDicPic/project_RJ', '_blank')">
+        <img src="https://i.imgur.com/NlAZd9f_d.webp?maxwidth=760&fidelity=grand" alt="Link para o repositório do projeto no GitHub" width="100" height="100">
+    </a>
+  </div>
   <div id="app">
     <h1>BairroGuessr</h1>
-    <p>Adivinhe qual o bairro destacado de hoje</p>
+    <h2>Qual o bairro de hoje?</h2>
+    <p>Chute um bairro e use o mapa para melhorar suas tentativas</p>
     <div id="mapa">
       <div id="mapid"></div>
-      <div class="leaflet-top leaflet-right">
-        <a id="github-link" href="#" onclick="window.open('https://github.com/RicDicPic/project_RJ', '_blank')">
-            <img src="https://i.imgur.com/NlAZd9f_d.webp?maxwidth=760&fidelity=grand" alt="Link para o repositório do projeto no GitHub" width="100" height="100">
-        </a>
-      </div>
     </div>
     <div id="painel-jogo">
       <div>
