--- a/index.html
+++ b/index.html
@@ -1,41 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Wordle RJ</title>
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css">
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <div class="leaflet-top leaflet-right">
-    <a id="github-link" href="#" onclick="window.open('https://github.com/RicDicPic/project_RJ', '_blank')">
-        <img src="https://i.imgur.com/NlAZd9f_d.webp?maxwidth=760&fidelity=grand" alt="Link para o repositório do projeto no GitHub" width="100" height="100">
-    </a>
-  </div>
-  <div id="app">
-    <h1>BairroGuessr</h1>
-    <h2>Qual o bairro de hoje?</h2>
-    <p>Chute um bairro e use o mapa para melhorar suas tentativas</p>
-    <div id="mapa">
-      <div id="mapid"></div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Wordle RJ</title>
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="github-icon">
+      <a
+        id="github-link"
+        href="https://github.com/RicDicPic/project_RJ"
+        target="_blank"
+      >
+        <img
+          src="https://i.imgur.com/NlAZd9f_d.webp?maxwidth=760&fidelity=grand"
+          alt="Link para o repositório do projeto no GitHub"
+          width="100"
+          height="100"
+        />
+      </a>
     </div>
-    <div id="painel-jogo">
-      <div>
-        <input 
-        type="text" 
-        id="bairro-input" 
-        class="awesomplete" 
-        placeholder="Digite o nome de um bairro" 
-        data-list="" 
-        autocomplete="off" 
-        >
-        <button id="enviar-btn">Enviar</button>
+    <div id="app">
+      <h1>BairroGuessr</h1>
+      <h2>Qual o bairro de hoje?</h2>
+      <p>Chute um bairro e use o mapa para melhorar suas tentativas</p>
+      <div id="mapa">
+        <div id="mapid"></div>
       </div>
-      <div id="resultado"></div>
+      <div id="painel-jogo">
+        <div>
+          <input
+            type="text"
+            id="bairro-input"
+            class="awesomplete"
+            placeholder="Digite o nome de um bairro"
+            data-list=""
+            autocomplete="off"
+          />
+          <button id="enviar-btn">Enviar</button>
+        </div>
+        <div id="resultado"></div>
+      </div>
     </div>
-  </div>
-  <script type="module" src="/main.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/awesomplete/1.1.2/awesomplete.min.js"></script>
-</body>
+    <script type="module" src="/main.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/awesomplete/1.1.2/awesomplete.min.js"></script>
+  </body>
 </html>
